<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alcala.burnedcaloriescalculator.BurnedCaloriesCalculatorActivity" >

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.alcala.burnedcaloriescalculator.BurnedCaloriesCalculatorActivity" >

        <TextView
            style="@style/TextView.Label"
            android:id="@+id/weightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weightLabel"
            android:layout_marginBottom="19dp"
            app:layout_constraintBottom_toTopOf="@+id/milesRanLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/weightET"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            style="@style/TextView.Label"
            android:id="@+id/milesRanLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milesRanLabel"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/caloriesBurnedLabel"
            android:layout_marginLeft="28dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            style="@style/TextView.Label"
            android:id="@+id/caloriesBurnedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caloriesBurnedLabel"
            android:layout_marginLeft="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="-57dp"
            app:layout_constraintBottom_toTopOf="@+id/heightLabel" />

        <TextView
            style="@style/TextView.Label"
            android:id="@+id/heightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heightLabel"
            app:layout_constraintRight_toLeftOf="@+id/footSpinner"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.202"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toTopOf="@+id/bmiLabel" />

        <TextView
            style="@style/TextView.Label"
            android:id="@+id/bmiLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmiLabel"
            android:layout_marginLeft="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/bmiTV"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="183dp" />

        <EditText
            style="@style/EditText"
            android:id="@+id/weightET"
            android:layout_width="135dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/weightET"
            android:inputType="numberDecimal"
            android:background="@color/seekbar"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            style="@style/TextView"
            android:id="@+id/milesRanTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milesRanTV"
            android:layout_marginTop="31dp"
            app:layout_constraintTop_toBottomOf="@+id/weightET"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/caloriesBurnedTV"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/milesRanLabel"
            android:layout_marginLeft="101dp" />

        <SeekBar
            style="@style/TextView"
            android:id="@+id/milesSeekBar"
            android:layout_width="100dp"
            android:layout_height="19dp"
            android:max="10"
            android:progress="1"
            android:layout_marginTop="31dp"
            app:layout_constraintTop_toBottomOf="@+id/weightET"
            android:layout_marginRight="65dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/milesRanTV"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.186"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/footSpinner"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            style="@style/TextView"
            android:id="@+id/footSpinner"
            android:layout_width="86dp"
            android:layout_height="24dp"
            app:layout_constraintRight_toLeftOf="@+id/inchesSpinner"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="160dp"
            app:layout_constraintBottom_toTopOf="@+id/nameET" />

        <Spinner
            style="@style/TextView"
            android:id="@+id/inchesSpinner"
            android:layout_width="81dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="99dp"
            app:layout_constraintTop_toBottomOf="@+id/milesSeekBar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.051" />

        <TextView
            style="@style/TextView"
            android:id="@+id/caloriesBurnedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caloriesBurnedTV"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/footSpinner"
            android:layout_marginRight="127dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/milesSeekBar"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/caloriesBurnedLabel"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="1.0" />

        <TextView
            style="@style/TextView"
            android:id="@+id/bmiTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmiTV"
            android:layout_marginRight="166dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="90dp"
            app:layout_constraintBottom_toTopOf="@+id/nameET" />

        <EditText
            style="@style/EditText"
            android:id="@+id/nameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nameET"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>